
14/02/2011 Changes

Parsing Arrays "{ statements }", and generating code.


13/02/2011 Changes

Looking into array {statements} support.


12/02/2011 Changes

Implemented smalltalk instance resolution enhancement suggested by Jose Antonio Illescas del Olmo.
(We now use a thread local to cache instance, rather than lookup current thread.) 
Backed out enhancement, however it did help reveal a logic error. We need to use current instance
(this) class classloader to get Smalltalk instance.
Refactored test to make it easier to change the way Smalltalk instance is fetched.
Now we fetch the smalltalk instance by looking at the receiver class' classloader.


11/01/2011 Changes

Added generation of array creation and add of array elements for Literal arrays.
+ tests around this.
Added grammar for numbers.
Added generation of Number instances from primitive numbers.
Added Smalltalk Runtime class library placeholders.


10/01/2011 Changes

Added grammar rules to parse nested literals.
Added Analyser rules for nested literal arrays.


09/01/2011 Changes

Parsing LiteralArrays and generating code for them.


04/01/2011 Changes

Parsing String Symbols.
Parsing Literal arrays. Still need to handled nested literal arrays.


03/01/2011 Changes

Parsing literals for True, False and Nil and resolving them to instances of the associated class.
Added a few placeholder Smalltalk Runtime sources.


02/01/2011 Changes

Ensured turning bootstrapped class into real class resolved the superclass chain, not just
current class. Including metaclass chain.
Added method comment chunk to TestMethod to ensure !! chunks were processed correctly.
Added parsing of Characters and conversion to Character instances.
Added paring of additional # symbols.


31/01/2011 Changes

Binding method into dictionary of owning object.


30/01/2011 Changes

Adding call to bind method into dictionary of owning object.


29/01/2011 Changes

Checked balancing of stack for <init> methods and normal methods.