@@ -2,6 +2,7 @@
 14/02/2011 Changes
 
 Parsing Arrays "{ statements }", and generating code.
+Parsing (expression)'s, and generating code for them.
 
 
 13/02/2011 Changes
